--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,26 @@
 
             <div class="language-dropdown" id="languageDropdown">
                 <ul class="language-list" id="languageList">
+                    <li data-lang="en" class="active">
+                        <i class="fas fa-globe-americas"></i>
+                        <span>English</span>
+                    </li>
+                    <li data-lang="fr">
+                        <i class="fas fa-globe-europe"></i>
+                        <span>Français</span>
+                    </li>
+                    <li data-lang="es">
+                        <i class="fas fa-globe-americas"></i>
+                        <span>Español</span>
+                    </li>
+                    <li data-lang="pt">
+                        <i class="fas fa-globe-americas"></i>
+                        <span>Português</span>
+                    </li>
+                    <li data-lang="ar">
+                        <i class="fas fa-globe-asia"></i>
+                        <span>العربية</span>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -56,9 +76,10 @@
                 </a>
             </div>
             </a>
-            <!-- This is the section for the mobile menu button -->
+
             <button class="mobile-menu-btn" id="mobileMenuBtn" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
+                <i class="fas fa-times" style="display: none;"></i>
             </button>
 
             <nav>
@@ -137,9 +158,12 @@
         </div>
     </footer>
 
+    <div class="nav-overlay" id="navOverlay"></div>
+
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/translations.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/translation-controller.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/translation-controllers.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/carousel.js') }}"></script>
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
         integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     {% block scripts %}{% endblock %}
